--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,5 +17,5 @@ jobs:
     - name: Build the Docker image
       run: |
               docker build . --file Dockerfile --tag vsw-birthday-tracker:$(date +%s)
-              docker run ghcr.io/cartosat/vsw-birthday-tracker:$(date +%s):latest
-              docker push ghcr.io/cartosat/vsw-birthday-tracker:$(date +%s):latest
+              docker run ghcr.io/cartosat/vsw-birthday-tracker:latest
+              docker push ghcr.io/cartosat/vsw-birthday-tracker:latest
