--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,6 +16,6 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build the Docker image
       run: |
-              docker build . --file Dockerfile --tag vsw-birthday-tracker:$(date +%s)
+              docker build . --file Dockerfile --tag ghcr.io/cartosat/vsw-birthday-tracker:$(date +%s)
               docker run ghcr.io/cartosat/vsw-birthday-tracker:latest
               docker push ghcr.io/cartosat/vsw-birthday-tracker:latest
