--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,4 +17,4 @@ jobs:
     - name: Build the Docker image
       run: |
               docker build . --file Dockerfile --tag ghcr.io/cartosat/vsw-birthday-tracker:$(date +%s)
-              docker push ghcr.io/cartosat/vsw-birthday-tracker:latest
+              docker push ghcr.io/cartosat/vsw-birthday-tracker:$(date +%s)
