--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,9 +2,7 @@ name: Birtday Tracker CI
 
 on:
   push:
-    branches: [ "master", "release" ]
-  pull_request:
-    branches: [ "master", "release" ]
+    branches: [ "release" ]
 
 jobs:
 
