--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -39,7 +39,7 @@
 	// Configure tool-specific properties.
 	// "customizations": {},
 	// Uncomment to connect as an existing user other than the container default. More info: https://aka.ms/dev-containers-non-root.
-	"remoteUser": "vips",
+	"remoteUser": "vscode",
 	"features": {
 		"ghcr.io/devcontainers/features/git:1": {
 			"version": "latest"
