--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -8,9 +8,9 @@ services:
 
     volumes:
       - /var/run/docker.sock:/var/run/docker-host.sock
-      - ~/.ssh:/home/vscode/.ssh:cached
+      - ~/.ssh:/home/vips/.ssh:cached
       - ../:/workspace:cached
 
     entrypoint: /usr/local/share/docker-init.sh
     command: sleep infinity
-    user: vscode
+    user: vips
