--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ coreschema==0.0.4
 Django==4.1.3
 django-phonenumber-field==7.0.0
 djangorestframework==3.14.0
+djangorestframework-simplejwt==5.3.0
 drf-spectacular==0.26.4
 flexicon==0.1.0
 idna==3.4
@@ -19,6 +20,7 @@ MarkupSafe==2.1.3
 openapi-codec==1.3.2
 phonenumberslite==8.13.0
 Pillow==9.3.0
+PyJWT==2.8.0
 pytz==2023.3.post1
 PyYAML==6.0.1
 referencing==0.30.2
