--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,7 +11,7 @@
 	"dockerComposeFile": [
 		"docker-compose.yml"
 	],
-	"service": "app",
+	"service": "birthday-tracker",
 	"workspaceFolder": "/workspace",
 	"remoteEnv": {
 		"LOCAL_WORKSPACE_FOLDER": "${localWorkspaceFolder}"
