--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '1'
 
 services:
-  app:
+  birthday-tracker:
     build:
       context: ..
       dockerfile: Dockerfile
@@ -14,3 +14,8 @@ services:
     entrypoint: /usr/local/share/docker-init.sh
     command: sleep infinity
     user: vips
+    networks:
+      - dsnl
+networks:
+  dsnl:
+    name: "dsnl"
